--- a/app/src/main/res/layout/activity_pantalla_ciudad.xml
+++ b/app/src/main/res/layout/activity_pantalla_ciudad.xml
@@ -20,11 +20,13 @@
         android:id="@+id/botonContinuar"
         android:layout_width="145dp"
         android:layout_height="54dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginEnd="40dp"
+        android:backgroundTint="#816409"
         android:text="Continuar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.277" />
 
     <Button
         android:id="@+id/botonEntrar"
@@ -32,6 +34,7 @@
         android:layout_height="54dp"
         android:layout_marginStart="28dp"
         android:layout_marginBottom="140dp"
+        android:backgroundTint="#816409"
         android:text="Entrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/botonContinuar"
