--- a/app/src/main/res/layout/activity_pantalla_enemigo.xml
+++ b/app/src/main/res/layout/activity_pantalla_enemigo.xml
@@ -28,24 +28,26 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
+        android:id="@+id/botonHuir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="128dp"
+        android:layout_marginEnd="68dp"
+        android:backgroundTint="#816409"
+        android:text="Huir"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+    <Button
         android:id="@+id/botonLuchar"
         android:layout_width="95dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="176dp"
+        android:layout_marginTop="128dp"
+        android:backgroundTint="#816409"
         android:text="Luchar"
         app:layout_constraintEnd_toStartOf="@+id/botonHuir"
-        app:layout_constraintHorizontal_bias="0.094"
+        app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <Button
-        android:id="@+id/botonHuir"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="176dp"
-        android:layout_marginEnd="68dp"
-        android:text="Huir"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 </androidx.constraintlayout.widget.ConstraintLayout>
