--- a/app/src/main/res/layout/activity_pantalla_mercader.xml
+++ b/app/src/main/res/layout/activity_pantalla_mercader.xml
@@ -30,28 +30,30 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/botonComerciar"
-        android:layout_width="145dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="132dp"
-        android:text="Comerciar"
+        android:id="@+id/botonContinuarMer"
+        android:layout_width="154dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:layout_marginEnd="32dp"
+        android:backgroundTint="#816409"
+        android:text="Continuar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.946"
+        app:layout_constraintStart_toEndOf="@+id/botonComerciar"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
-        android:id="@+id/botonContinuarMer"
-        android:layout_width="154dp"
+        android:id="@+id/botonComerciar"
+        android:layout_width="145dp"
         android:layout_height="51dp"
-        android:layout_marginTop="132dp"
-        android:layout_marginEnd="32dp"
-        android:text="Continuar"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="100dp"
+        android:backgroundTint="#816409"
+        android:text="Comerciar"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.97"
-        app:layout_constraintStart_toEndOf="@+id/botonComerciar"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3"
         app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
