--- a/app/src/main/res/layout/activity_pantalla_ciudad.xml
+++ b/app/src/main/res/layout/activity_pantalla_ciudad.xml
@@ -20,13 +20,14 @@
         android:id="@+id/botonContinuar"
         android:layout_width="145dp"
         android:layout_height="54dp"
-        android:layout_marginEnd="40dp"
+        android:layout_marginEnd="28dp"
+        android:layout_marginBottom="140dp"
         android:backgroundTint="#816409"
         android:text="Continuar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.277" />
+        app:layout_constraintVertical_bias="0.765" />
 
     <Button
         android:id="@+id/botonEntrar"
@@ -38,10 +39,10 @@
         android:text="Entrar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/botonContinuar"
-        app:layout_constraintHorizontal_bias="0.379"
+        app:layout_constraintHorizontal_bias="0.235"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.769" />
+        app:layout_constraintVertical_bias="0.765" />
 
     <TextView
         android:id="@+id/textView2"
