--- a/app/src/main/res/layout/activity_cosas_mercader.xml
+++ b/app/src/main/res/layout/activity_cosas_mercader.xml
@@ -22,11 +22,12 @@
         android:id="@+id/textView6"
         android:layout_width="342dp"
         android:layout_height="20dp"
+        android:layout_marginTop="124dp"
         android:text="Estos son los objetos que le queden a la mochila"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.49"
+        app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="139dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/infoEspacio"
