--- a/app/src/main/res/layout/activity_cosas_mercader.xml
+++ b/app/src/main/res/layout/activity_cosas_mercader.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:foregroundGravity="center"
     tools:context=".cosasMercader"
     tools:layout_editor_absoluteX="0dp"
     tools:layout_editor_absoluteY="-19dp">
@@ -13,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="36dp"
+        android:foregroundGravity="center"
         android:text="Este es el espacio que le queda a la mochila"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +25,8 @@
         android:layout_width="342dp"
         android:layout_height="20dp"
         android:layout_marginTop="124dp"
-        android:text="Estos son los objetos que le queden a la mochila"
+        android:foregroundGravity="center"
+        android:text="Estos son los objetos que le quedan a la mochila"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.686"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,6 +37,7 @@
         android:layout_width="42dp"
         android:layout_height="19dp"
         android:layout_marginTop="32dp"
+        android:gravity="center"
         app:layout_constraintBottom_toTopOf="@+id/textView6"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -43,8 +47,9 @@
 
     <TextView
         android:id="@+id/infoObjetos"
-        android:layout_width="69dp"
-        android:layout_height="21dp"
+        android:layout_width="48dp"
+        android:layout_height="25dp"
+        android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
