--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -97,7 +97,7 @@
                 android:layout_height="wrap_content"
                 android:clickable="true"
                 android:gravity="center"
-                android:onClick="clickTextView"
+                android:onClick="textViewClicable"
                 android:text="Aun no estas registrado.Registrate" />
         </TableRow>
 
