--- a/app/src/main/res/layout/activity_pantalla_clases.xml
+++ b/app/src/main/res/layout/activity_pantalla_clases.xml
@@ -10,20 +10,21 @@
         android:id="@+id/botonAceptar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="72dp"
+        android:layout_marginBottom="140dp"
         android:backgroundTint="#74C85E0D"
         android:text="Aceptar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/botonBerserker"
+        app:layout_constraintTop_toBottomOf="@+id/botonMercader"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/botonGuerrero"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="60dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
         android:backgroundTint="#74C85E0D"
         android:text="Guerrero"
@@ -38,8 +39,6 @@
         android:backgroundTint="#74C85E0D"
         android:text="Berserker"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.627"
-        app:layout_constraintStart_toEndOf="@+id/botonGuerrero"
         app:layout_constraintTop_toBottomOf="@+id/botonLadron" />
 
     <Button
@@ -64,6 +63,18 @@
         app:layout_constraintHorizontal_bias="0.621"
         app:layout_constraintStart_toEndOf="@+id/botonMago"
         app:layout_constraintTop_toBottomOf="@+id/foto" />
+
+    <Button
+        android:id="@+id/botonMercader"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:backgroundTint="#74C85E0D"
+        android:text="Mercader"
+        app:layout_constraintEnd_toStartOf="@+id/botonBerserker"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/botonGuerrero"
+        app:layout_constraintTop_toBottomOf="@+id/botonGuerrero" />
 
     <ImageView
         android:id="@+id/foto"
